--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>History</title>
   </head>
   <body>
     <!-- The code for the navbar was taken from the bootstrap documentation at https://getbootstrap.com/docs/5.0/components/navbar/?#nav-->
@@ -39,13 +39,43 @@
         </div>
       </nav>
 
-    <h1>Hello, world!</h1>
+    <main class="container">
+        <div class="bg-light p-5 rounded">
+          <h1 style="margin: 0 auto;">History of the Model M</h1>
+          <p>&nbsp;</p>
+          <p>The original Model M is the designation of a group of keyboards designed and manufactured by IBM starting in 1985, and later by Lexmark International. The keyboard and its many variations had its own unique characteristics, with the vast majority having a buckling-spring key design that gave exceptional tactile feedback and swappable keycaps. While the layout of a Model M may seem typical to any modern keyboard, that is because prior to the Model M, the extra keys that keyboards need were found in arbitrary positions,
+          like with the Commodore 64 keyboard pictured below.</p>
+
+          <img src="https://www.pagetable.com/docs/c16kbd/c16kbd.jpg" class="img-fluid" alt="...">
+          <footer>Picture taken from <cite><a href="https://www.pagetable.com/?p=1050">pagetable.com</a></cite></footer>
+
+          <p>&nbsp;</p>
+          <p>Because of the popularity of IBM Personal Computers during the 1980s and 1990s, and the extensive research that IBM took to designing the layout to be easy to use and ergonomical, other general keyboards would mimic this design. Other than some minor additions, such as the Windows key and the Menu key, the design continues to be the standard of keyboard layouts. Model M keyboards continue to have a healthy aftermarket due to their extreme durability with hard plastic shelling and the iron plate inside the unit, as well as exceptional tactile feedback given due to the buckling-spring design.</p> 
+
+          <p>&nbsp;</p>
+          <p>Former IBM and Lexmark employees slowly purchased the Model M intellectual property rights, and started the keyboard manufacturer company Unicomp in 1996. Located in Lexington, Kentucky, Unicomp also acquired the same tooling that was used to create the Model M keyboard. The company has created new variations of the Model M keyboard, such 
+          as a Model M that uses a MacOS keyboard layout, a lighter model that uses less plastic in the shell, and a model that uses a Tenkeyless (TKL) layout that removes the numpad. Some of the variations of the Model M Unicomp and links to their respective product pages include:  
+          </p>
+
+          <ul>
+            <li><a href="https://www.pckeyboard.com/page/product/MINI_M">The Mini M</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/NEW_M">The New Model M</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UB4ZPHA">The Spacesaver M</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UWZBP4A">The Mini M</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UB40PGA">The EnduraPro</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UB4041A">The Classic</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UB40B5A">The PC 122</a></li>
+            <li><a href="https://www.pckeyboard.com/page/product/UN4041B">The Quiet Touch R/D</a></li>
+          </ul>
+          
+        </div>
+    </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
 
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
