--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- The code for the navbar was taken from the bootstrap documentation at https://getbootstrap.com/docs/5.0/components/navbar/?#nav-->
@@ -41,7 +41,7 @@
 
     <!-- The code for the carasol was taken from the bootstrap documentation at https://getbootstrap.com/docs/5.0/components/carousel/-->
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width: 70%; margin: 0 auto;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -101,8 +101,18 @@
           <a href="images/gnome.jpg" download> 
             <button>Download</button> 
         </a> 
+
+        <p>Press the following button to receive a special message!</p>
+        <button type="button" id="success" class="btn btn-primary">Primary</button>
+        </div>
+
+        <div class="bg-light p-5 rounded" id="hide">
+          <img src="images/gnome.jpg" alt="Gnome">
         </div>
     </main>
+
+    <p>&nbsp;</p>
+
     
     <main class="containter">
         <div class="bg-light p-5 rounded" style="height: 15em; width:25em; border: 1px solid #ccc; overflow: auto; margin: 0 auto;">
@@ -120,17 +130,28 @@
         </div>
     </main>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="get">
+      <main class="containter" style="width: 70%; margin: 0 auto;">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input type="email" class="form-control" name="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+          <textarea class="form-control" name="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+          <input class="btn btn-primary" type="submit" value="Submit">
+      </main>
+    </form>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script>
+      $('#success').click(function(){
+        $('#hide').finish().show().delay(2500).fadeOut("slow");
+      })
+    </script>
   </body>
 </html>
