--- a/media.html
+++ b/media.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Media</title>
   </head>
   <body>
     <!-- The code for the navbar was taken from the bootstrap documentation at https://getbootstrap.com/docs/5.0/components/navbar/?#nav-->
@@ -39,19 +39,25 @@
         </div>
       </nav>
 
-    <h1>Hello</h1>
+    
+    <main class="container">
+      <div class="bg-light p-5 rounded">
+        <h1 style="margin: 0 auto;">Media about the Model M</h1>
+        <p>&nbsp;</p>
+        <p>Across the internet, there are many articles and videos that cover the Model M. The most popular video about the Model M is from Linus Media Group which goes over the history of the IBM Model M, and its buckling-spring design.</p>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/D7wmMZmMinM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>&nbsp;</p>
+        <p>If you are looking for a review on the Mini-M, the channel Chyrosran22 has a great video going over the model in the video below. The channel also cover other IBM keyboards in great detail, so I would suggest checking out his content.</p>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kxT1ja8OWRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>&nbsp;</p>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+        <p>If you want to read about the Model M instead, the verge released an article reviewing the New Model M from Unicomp listed <a href="https://www.theverge.com/22369731/unicomp-mechanical-keyboard-new-model-m-review-price">here.</a></p>
+      </div>
+    </main>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
   </body>
 </html>
