--- a/personal.html
+++ b/personal.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Personal</title>
   </head>
   <body>
     <!-- The code for the navbar was taken from the bootstrap documentation at https://getbootstrap.com/docs/5.0/components/navbar/?#nav-->
@@ -39,19 +39,21 @@
         </div>
       </nav>
 
-    <h1>Hello, world!</h1>
+    <main class="container">
+      <div class="bg-light p-5 rounded">
+        <h1 style="margin: 0 auto;">My Model M Experience</h1>
+        <p>&nbsp;</p>
+        <p>I owned keyboards, both mechanical and rubber dome in the past. The membrane keyboard had MX Red switches, which were linear. Linear switches were ideal for gaming purposes, but I wanted to purchase a keyboard that gave good tactile feedback. I was initially looking for a mechanical keyboard with MX Blues or MX Browns, but then I came across articles and videos praising the IBM Model M as the ideal keyboard for typists. Later, I found out the Model M keyboards were still being made by a company called Unicomp, so I popped over to their website and placed an order for a keyboard. I initially wanted to get a Mini-M model, but they were still under development at the time, so I opted instead for a Classic Model M with a USB connection, which my personal keyboard that I own can be pictured below.</p>
+        <p>&nbsp;</p>
+        <img src="https://s3.gifyu.com/images/Model_M_All_Keys.jpg" class="img-fluid" alt="Model M">
+        <p>&nbsp;</p>
+        <p>Overall, I enjoy using the Model M. The keys have good travel, and they give amazing tactile feedback during use. They are consider to be quite noisy, on par with MX Blue switches, but I personally enjoy the sound. It has nice amount of weight to it, weighting about 7 pounds. It also has a small notch on the top that can be used to hold pencils and pens, which is pretty neat. The keyboard is quite expensive, costing me $104.00 before taxes, so I would suggest looking for a cheaper mechanical keyboard from Amazon first unless you know exactly what you want. I knew that I wanted to feel the buckling springs and the classic design that harkons back to the 1980s, so I'm very pleased with the overall quality of the product. If you are interested in purchasing a Model M, I would suggest looking into either the Mini Model M, or the New Model M linked at the bottom of the history page <a href="history.html">here</a>.</p>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+      </div>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
 
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
